add module admisi

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
-        "nwidart/laravel-modules": "9.*",
+        "nwidart/laravel-modules": "^10.0",
         "spatie/laravel-permission": "^6.3",
         "yoeunes/toastr": "^2.3"
     },
